Port Forge support for Minecraft 1.21.11